data/derived/fa15/progs/unify/prog3663.ml.out
Characters 247-248:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list list -> int * int -> int list
       but an expression was expected of type
         int list list -> int * int -> int list list
       Type int is not compatible with type int list 
